<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    tools:context=".MenuUpdateActivity">
    <include layout="@layout/toolbar"
        android:id="@+id/update_menu_toolbar" />


    <RelativeLayout
        android:id="@+id/riceSp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:layout_centerHorizontal="true"
        android:layout_below="@+id/update_menu_toolbar">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="90dp"
            android:layout_marginRight="128dp"
            android:layout_toStartOf="@+id/rice"
            android:layout_toLeftOf="@+id/rice"
            android:text="@string/rice"
            android:textSize="18sp" />

        <Spinner
            android:id="@+id/rice"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:layout_marginEnd="10dp"
            android:layout_marginRight="10dp"
            android:entries="@array/Availability"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="1.0"
            tools:layout_editor_absoluteX="236dp" />

    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="130dp"
        android:layout_centerHorizontal="true"
        android:layout_below="@+id/update_menu_toolbar">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="90dp"
            android:layout_marginRight="90dp"
            android:layout_toStartOf="@+id/chicken"
            android:layout_toLeftOf="@+id/chicken"
            android:text="@string/chicken"
            android:textSize="18sp" />

        <Spinner
            android:id="@+id/chicken"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:layout_marginEnd="10dp"
            android:layout_marginRight="10dp"
            android:entries="@array/Availability"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="1.0"
            tools:layout_editor_absoluteX="236dp" />

    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="220dp"
        android:layout_centerHorizontal="true"
        android:layout_below="@+id/update_menu_toolbar">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="70dp"
            android:layout_marginRight="79dp"
            android:layout_toStartOf="@+id/eggcurry"
            android:layout_toLeftOf="@+id/eggcurry"
            android:text="@string/egg_curry"
            android:textSize="18sp" />

        <Spinner
            android:id="@+id/eggcurry"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:layout_marginEnd="10dp"
            android:layout_marginRight="10dp"
            android:entries="@array/Availability"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="1.0"
            tools:layout_editor_absoluteX="236dp" />

    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="310dp"
        android:layout_centerHorizontal="true"
        android:layout_below="@+id/update_menu_toolbar">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="90dp"
            android:layout_marginRight="112dp"
            android:layout_toStartOf="@+id/lentil"
            android:layout_toLeftOf="@+id/lentil"
            android:text="@string/lentil"
            android:textSize="18sp" />

        <Spinner
            android:id="@+id/lentil"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:layout_marginEnd="10dp"
            android:layout_marginRight="10dp"
            android:entries="@array/Availability"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="1.0"
            tools:layout_editor_absoluteX="236dp" />

    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="400dp"
        android:layout_centerHorizontal="true"
        android:layout_below="@+id/update_menu_toolbar">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="90dp"
            android:layout_marginRight="94dp"
            android:layout_toStartOf="@+id/khichuri"
            android:layout_toLeftOf="@+id/khichuri"
            android:text="@string/khichuri"
            android:textSize="18sp" />

        <Spinner
            android:id="@+id/khichuri"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:layout_marginEnd="10dp"
            android:layout_marginRight="10dp"
            android:entries="@array/Availability"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="1.0"
            tools:layout_editor_absoluteX="236dp" />

    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="490dp"
        android:layout_centerHorizontal="true"
        android:layout_below="@+id/update_menu_toolbar">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="90dp"
            android:layout_marginRight="93dp"
            android:layout_toStartOf="@+id/pudding"
            android:layout_toLeftOf="@+id/pudding"
            android:text="@string/pudding"
            android:textSize="18sp" />

        <Spinner
            android:id="@+id/pudding"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:layout_marginEnd="10dp"
            android:layout_marginRight="10dp"
            android:entries="@array/Availability"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="1.0"
            tools:layout_editor_absoluteX="236dp" />

    </RelativeLayout>

    <Button
        android:id="@+id/menu_update_btn"
        android:layout_width="160dp"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="560dp"
        android:background="@color/colorPrimary"
        android:text="@string/update"
        android:textColor="#FFFFFF"
        android:layout_below="@+id/update_menu_toolbar" />


</RelativeLayout>